--- a/style.css
+++ b/style.css
@@ -390,12 +390,16 @@ html {
     overflow-y: auto;
 }
 
-.changelog-text {
+.changelog-text, .changelog-text a {
     color: #fff;
     font-size: 18px;
     font-family: Verdana, sans-serif;
     font-weight: 400;
     margin: 0px 0px 15px 0px;
+}
+
+.featured-yt {
+    border: 0;
 }
 
 ::-webkit-scrollbar {
