--- a/style.css
+++ b/style.css
@@ -440,6 +440,8 @@ html {
 }
 
 #a-bottom-respawn {
+    width: 100%;
+    height: 100%;
     display: flex;
     padding: 10px;
     border-radius: 8px;
